# serializer version: 1
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs2_ck2]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg208hqOO7HyiclynxvS1tYDyzqD-USg0mlfeuHIYYNYk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg6tMNbY5CS3REyWTOsFAE5Lo4eK70E4KLlsS5-n3_ikU=',
      'err': 0,
    }),
  ])
# ---
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs4_ck1]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgcP0BDUhRvpPozg6321TDkyhQFxLF3ZYnua7N3WIO6Cs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgrtFICYs4TmmB7KyBQi7InQw8GfOF5maSrKJVj-P02so=',
      'err': 0,
    }),
  ])
# ---
